--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: Get Started Mardown
 description: Repositório criado para explicar um pouco sobre Markdown
 theme: jekyll-theme-cayman
+
+show_downloads: true
