--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: Repositório criado para explicar um pouco sobre Markdown
 theme: jekyll-theme-cayman
 
 show_downloads: true
+
+header_content: "Copyright &copy; 2017-2019 Patrick Marsceill. Distributed by an <a href=\"https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt\">MIT license.</a>"
