update title for 'Markdown Básico'

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Get Started Mardown
+title: Mardown Básico
 description: Repositório criado para explicar um pouco sobre Markdown
 theme: jekyll-theme-cayman
 
